Bug 57092 - EBCDIC problem with ProxyRemote to HTTPS
Summary: EBCDIC problem with ProxyRemote to HTTPS
Status: RESOLVED FIXED
Alias: None
Product: Apache httpd-2
Classification: Unclassified
Component: mod_proxy (show other bugs)
Version: 2.5-HEAD
Hardware: PC Linux
: P2 normal (vote)
Target Milestone: ---
Assignee: Apache HTTPD Bugs Mailing List
URL:
Keywords: FixedInTrunk, PatchAvailable
Depends on:
Blocks:
 
Reported: 2014-10-14 17:41 UTC by Edward Lu
Modified: 2015-01-23 09:50 UTC (History)
0 users



Attachments
Fix ProxyRemote with ProxyPass when using EBCDIC (1.37 KB, patch)
2014-10-14 17:41 UTC, Edward Lu
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Edward Lu 2014-10-14 17:41:11 UTC
Created attachment 32110 [details]
Fix ProxyRemote with ProxyPass when using EBCDIC

When using EBCDIC encoding, HTTPS through ProxyPass and ProxyRemote doesn't work correctly. For example:

<VirtualHost *:441>
SSLProxyEngine on
ProxyRemote https https://127.0.0.1:441
ProxyPass /proxyme https://127.0.0.1/index.html
</VirtualHost>

<VirtualHost *:442>
ProxyRemote on
</VirtualHost>

results in a 403 and this in the error log:

(70014)End of file found: AH00958: HTTPS: attempt to connect to localhost:443 via http CONNECT through 127.0.0.1:442 (localhost) failed
Comment 1 Yann Ylavic 2015-01-23 09:50:02 UTC
Backported to 2.4.11 in r1636002.